src/parser.js
// Generated by Peggy 3.0.2.
//
// https://peggyjs.org/

"use strict";

function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { Program: peg$parseProgram };
  var peg$startRuleFunction = peg$parseProgram;

  var peg$c0 = "#";
  var peg$c1 = "end";
  var peg$c2 = "define";
  var peg$c3 = "type";
  var peg$c4 = "[]";
  var peg$c5 = "pipe";
  var peg$c6 = "parameters";
  var peg$c7 = "script";
  var peg$c8 = "flow";
  var peg$c9 = "action";
  var peg$c10 = "function";
  var peg$c11 = "(";
  var peg$c12 = ")";
  var peg$c13 = ":";
  var peg$c14 = ",";
  var peg$c15 = "component";
  var peg$c16 = "instance";
  var peg$c17 = "from";
  var peg$c18 = "container";
  var peg$c19 = "width";
  var peg$c20 = "height";
  var peg$c21 = "px";
  var peg$c22 = "pc";
  var peg$c23 = "content";
  var peg$c24 = "button";
  var peg$c25 = "field";
  var peg$c26 = "table";
  var peg$c27 = "title";
  var peg$c28 = "columns";
  var peg$c29 = "column";
  var peg$c30 = "property";
  var peg$c31 = "const";
  var peg$c32 = "\"";
  var peg$c33 = "\n";
  var peg$c34 = "\r\n";
  var peg$c35 = "\r";

  var peg$r0 = /^[^\r\n]/;
  var peg$r1 = /^[a-zA-Z0-9_]/;
  var peg$r2 = /^[0-9]/;
  var peg$r3 = /^[a-zA-Z_]/;
  var peg$r4 = /^[^"]/;
  var peg$r5 = /^[ \t\v\f]/;

  var peg$e0 = peg$literalExpectation("#", false);
  var peg$e1 = peg$classExpectation(["\r", "\n"], true, false);
  var peg$e2 = peg$literalExpectation("end", false);
  var peg$e3 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], false, false);
  var peg$e4 = peg$literalExpectation("define", false);
  var peg$e5 = peg$literalExpectation("type", false);
  var peg$e6 = peg$literalExpectation("[]", false);
  var peg$e7 = peg$literalExpectation("pipe", false);
  var peg$e8 = peg$literalExpectation("parameters", false);
  var peg$e9 = peg$literalExpectation("script", false);
  var peg$e10 = peg$literalExpectation("flow", false);
  var peg$e11 = peg$anyExpectation();
  var peg$e12 = peg$literalExpectation("action", false);
  var peg$e13 = peg$literalExpectation("function", false);
  var peg$e14 = peg$literalExpectation("(", false);
  var peg$e15 = peg$literalExpectation(")", false);
  var peg$e16 = peg$literalExpectation(":", false);
  var peg$e17 = peg$literalExpectation(",", false);
  var peg$e18 = peg$literalExpectation("component", false);
  var peg$e19 = peg$literalExpectation("instance", false);
  var peg$e20 = peg$literalExpectation("from", false);
  var peg$e21 = peg$literalExpectation("container", false);
  var peg$e22 = peg$literalExpectation("width", false);
  var peg$e23 = peg$literalExpectation("height", false);
  var peg$e24 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e25 = peg$literalExpectation("px", false);
  var peg$e26 = peg$literalExpectation("pc", false);
  var peg$e27 = peg$literalExpectation("content", false);
  var peg$e28 = peg$literalExpectation("button", false);
  var peg$e29 = peg$literalExpectation("field", false);
  var peg$e30 = peg$literalExpectation("table", false);
  var peg$e31 = peg$literalExpectation("title", false);
  var peg$e32 = peg$literalExpectation("columns", false);
  var peg$e33 = peg$literalExpectation("column", false);
  var peg$e34 = peg$literalExpectation("property", false);
  var peg$e35 = peg$literalExpectation("const", false);
  var peg$e36 = peg$classExpectation([["a", "z"], ["A", "Z"], "_"], false, false);
  var peg$e37 = peg$literalExpectation("\"", false);
  var peg$e38 = peg$classExpectation(["\""], true, false);
  var peg$e39 = peg$classExpectation([" ", "\t", "\v", "\f"], false, false);
  var peg$e40 = peg$literalExpectation("\n", false);
  var peg$e41 = peg$literalExpectation("\r\n", false);
  var peg$e42 = peg$literalExpectation("\r", false);

  var peg$f0 = function(statements) {
      return {
        type: "Program",
        statements: statements.filter(s => s !== null)
      };
    };
  var peg$f1 = function() {
      return null; // Ignore comments in the AST
    };
  var peg$f2 = function(name, fields) {
      return {
        type: "TypeDefinition",
        name: name,
        fields: fields.filter(f => f !== null)
      };
    };
  var peg$f3 = function(name, typeName) {
      return {
        type: "TypeField",
        name: name,
        fieldType: typeName
      };
    };
  var peg$f4 = function(name) {
      return {
        typeName: name,
        isArray: true
      };
    };
  var peg$f5 = function(name) {
      return {
        typeName: name,
        isArray: false
      };
    };
  var peg$f6 = function(name, params, script) {
      return {
        type: "PipeDefinition",
        name: name,
        parameters: params ? params[2] : [],
        script: script ? script[2] : null
      };
    };
  var peg$f7 = function(params) {
      return params.filter(p => p !== null);
    };
  var peg$f8 = function(name, typeName) {
      return {
        type: "ParameterDefinition",
        name: name,
        paramType: typeName
      };
    };
  var peg$f9 = function(code) {
      return code.trim();
    };
  var peg$f10 = function(name, params, code, func) {
      return {
        type: "ActionDefinition",
        name: name,
        parameters: params ? params[2] : [],
        script: code ? code[2] : null,
        function: func
      };
    };
  var peg$f11 = function(name, params, body) {
      return {
        name: name,
        params: params,
        body: body.trim()
      };
    };
  var peg$f12 = function(name) {
      return {
        name: name,
        type: type
      };
    };
  var peg$f13 = function(name) {
      return {
        name: name,
        type: type
      };
    };
  var peg$f14 = function(name, props) {
      return {
        type: "ComponentTypeDefinition",
        name: name,
        properties: props.filter(p => p !== null)
      };
    };
  var peg$f15 = function(name, value) {
      return {
        type: "ComponentProperty",
        name: name,
        value: value
      };
    };
  var peg$f16 = function(name, props) {
      return {
        type: "ComponentSubtype",
        name: name,
        properties: props.filter(p => p !== null)
      };
    };
  var peg$f17 = function(name, flows, ui) {
      return {
        type: "ComponentInstanceDefinition",
        name: name,
        flows: flows.filter(f => f !== null),
        ui: ui
      };
    };
  var peg$f18 = function(typeName, name, source) {
      return {
        type: "FlowDefinition",
        flowType: typeName,
        name: name,
        source: source
      };
    };
  var peg$f19 = function(sourceType, source, args) {
      return {
        type: "FlowSource",
        sourceType: sourceType,
        source: source,
        args: args
      };
    };
  var peg$f20 = function(attrs) {
      return {
        type: "Container",
        attributes: attrs.filter(a => a !== null)
      };
    };
  var peg$f21 = function(name, value) {
      return {
        type: "DimensionAttribute",
        name: name,
        value: value
      };
    };
  var peg$f22 = function(value) {
      return value;
    };
  var peg$f23 = function(value, unit) {
      return {
        type: "Dimension",
        value: parseInt(value, 10),
        unit: unit
      };
    };
  var peg$f24 = function(value) {
      return {
        type: "Number",
        value: parseInt(value, 10)
      };
    };
  var peg$f25 = function(elements) {
      return {
        type: "ContentAttribute",
        elements: elements.filter(e => e !== null)
      };
    };
  var peg$f26 = function(attrs) {
      return {
        type: "Button",
        attributes: attrs.filter(a => a !== null)
      };
    };
  var peg$f27 = function(attrs) {
      return {
        type: "Field",
        subtype: subtype,
        attributes: attrs.filter(a => a !== null)
      };
    };
  var peg$f28 = function(attrs) {
      return {
        type: "Table",
        attributes: attrs.filter(a => a !== null)
      };
    };
  var peg$f29 = function(value) {
      return {
        type: "Attribute",
        name: "flow",
        value: value
      };
    };
  var peg$f30 = function(value) {
      return {
        type: "Attribute",
        name: "title",
        value: value
      };
    };
  var peg$f31 = function(columns) {
      return {
        type: "ColumnsAttribute",
        columns: columns.filter(c => c !== null)
      };
    };
  var peg$f32 = function(attrs) {
      return {
        type: "Column",
        subtype: subtype,
        attributes: attrs.filter(a => a !== null)
      };
    };
  var peg$f33 = function(name, value) {
      return {
        type: "Attribute",
        name: name,
        value: value
      };
    };
  var peg$f34 = function(actions) {
      return {
        type: "ActionAttribute",
        actions: actions.filter(a => a !== null)
      };
    };
  var peg$f35 = function(name, params) {
      return {
        type: "ActionOperation",
        name: name,
        params: params.filter(p => p !== null)
      };
    };
  var peg$f36 = function(name, value) {
      return {
        name: name,
        value: value
      };
    };
  var peg$f37 = function(name, value) {
      return {
        name: name,
        value: value
      };
    };
  var peg$f38 = function(value, property) {
        return {
          type: "NamedFlowReference",
          flowName: value,
          property: property ? property[2] : null
        };
      };
  var peg$f39 = function(property) {
        return {
          type: "DefaultFlowReference",
          property: property ? property[2] : null
        };
      };
  var peg$f40 = function(value) {
        return {
          type: "ConstReference",
          value: value
        };
      };
  var peg$f41 = function(source) {
      return {
        type: "FlowReference",
        source: source
      };
    };
  var peg$f42 = function(name) {
      return name;
    };
  var peg$f43 = function(value) {
      return value;
    };
  var peg$currPos = 0;
  var peg$savedPos = 0;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = 0;
  var peg$maxFailExpected = [];
  var peg$silentFails = 0;

  var peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseProgram() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parse__();
    s2 = [];
    s3 = peg$parseComment();
    if (s3 === peg$FAILED) {
      s3 = peg$parseStatement();
    }
    while (s3 !== peg$FAILED) {
      s2.push(s3);
      s3 = peg$parseComment();
      if (s3 === peg$FAILED) {
        s3 = peg$parseStatement();
      }
    }
    s3 = peg$parse__();
    peg$savedPos = s0;
    s0 = peg$f0(s2);

    return s0;
  }

  function peg$parseStatement() {
    var s0;

    s0 = peg$parseTypeDefinition();
    if (s0 === peg$FAILED) {
      s0 = peg$parsePipeDefinition();
      if (s0 === peg$FAILED) {
        s0 = peg$parseActionDefinition();
        if (s0 === peg$FAILED) {
          s0 = peg$parseComponentTypeDefinition();
          if (s0 === peg$FAILED) {
            s0 = peg$parseComponentInstanceDefinition();
          }
        }
      }
    }

    return s0;
  }

  function peg$parseComment() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 35) {
      s1 = peg$c0;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      if (peg$r0.test(input.charAt(peg$currPos))) {
        s3 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e1); }
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        if (peg$r0.test(input.charAt(peg$currPos))) {
          s3 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e1); }
        }
      }
      s3 = peg$parseEOL();
      if (s3 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f1();
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseEndKeyword() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = peg$parse__();
    if (input.substr(peg$currPos, 3) === peg$c1) {
      s2 = peg$c1;
      peg$currPos += 3;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e2); }
    }
    if (s2 !== peg$FAILED) {
      s3 = peg$currPos;
      peg$silentFails++;
      if (peg$r1.test(input.charAt(peg$currPos))) {
        s4 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e3); }
      }
      peg$silentFails--;
      if (s4 === peg$FAILED) {
        s3 = undefined;
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      if (s3 !== peg$FAILED) {
        s1 = [s1, s2, s3];
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseTypeDefinition() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11;

    s0 = peg$currPos;
    s1 = peg$parse__();
    if (input.substr(peg$currPos, 6) === peg$c2) {
      s2 = peg$c2;
      peg$currPos += 6;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e4); }
    }
    if (s2 !== peg$FAILED) {
      s3 = peg$parse__();
      if (input.substr(peg$currPos, 4) === peg$c3) {
        s4 = peg$c3;
        peg$currPos += 4;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e5); }
      }
      if (s4 !== peg$FAILED) {
        s5 = peg$parse__();
        s6 = peg$parseIdentifier();
        if (s6 !== peg$FAILED) {
          s7 = peg$parse__();
          s8 = [];
          s9 = peg$parseTypeField();
          if (s9 === peg$FAILED) {
            s9 = peg$parseComment();
          }
          while (s9 !== peg$FAILED) {
            s8.push(s9);
            s9 = peg$parseTypeField();
            if (s9 === peg$FAILED) {
              s9 = peg$parseComment();
            }
          }
          s9 = peg$parse__();
          s10 = peg$parseEndKeyword();
          if (s10 !== peg$FAILED) {
            s11 = peg$parse__();
            peg$savedPos = s0;
            s0 = peg$f2(s6, s8);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseTypeField() {
    var s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    s1 = peg$currPos;
    peg$silentFails++;
    s2 = peg$parseEndKeyword();
    peg$silentFails--;
    if (s2 === peg$FAILED) {
      s1 = undefined;
    } else {
      peg$currPos = s1;
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse__();
      s3 = peg$parseIdentifier();
      if (s3 !== peg$FAILED) {
        s4 = peg$parse__();
        s5 = peg$parseTypeName();
        if (s5 !== peg$FAILED) {
          s6 = peg$parse__();
          s7 = peg$parseEOL();
          if (s7 === peg$FAILED) {
            s7 = null;
          }
          peg$savedPos = s0;
          s0 = peg$f3(s3, s5);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseTypeName() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parseIdentifier();
    if (s1 !== peg$FAILED) {
      if (input.substr(peg$currPos, 2) === peg$c4) {
        s2 = peg$c4;
        peg$currPos += 2;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e6); }
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f4(s1);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseIdentifier();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$f5(s1);
      }
      s0 = s1;
    }

    return s0;
  }

  function peg$parsePipeDefinition() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13;
